[package]
name = "neurowealth-vault"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable `cargo test -p neurowealth-vault --features blend-devnet`
blend-devnet = []
# Enable `cargo test -p neurowealth-vault --features dex-devnet`
dex-devnet = []

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1"

